objects/FINS_Insurance_Product_Coverage__c.object
<CustomObject>
    <description>Object The describes the coverages associated with a product, placeholder for what would be mapped via an external policy administration system.</description>
    <fields>
        <fullName>Comparison_Text__c</fullName>
        <label>Comparison Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comparison Feature</fullName>
                </value>
                <value>
                    <fullName>Policy Coverage</fullName>
                </value>
                <value>
                    <fullName>Optional Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decsription__c</fullName>
        <label>Decsription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Limit_Amount__c</fullName>
        <label>Limit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Insurance</fullName>
                </value>
                <value>
                    <fullName>Car Insurance</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Travel Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Coverage_Type__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Decsription__c</columns>
        <columns>Premium_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>